# motorcycle-coach

./: Dockerfile  README.md  app.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: __init__.py  app.py  motorcycle_environment.py  tasks.py
