[project]
name = "motorcycle_coach"
version = "0.1.0"
description = "AR Motorcycle Coach"
dependencies = [
    "fastapi",
    "uvicorn",
]
requires-python = ">=3.10"

[project.scripts]
server = "app:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
