[project]
name = "motorcycle_coach"
version = "0.1.0"
description = "AR Motorcycle Coach"
dependencies = [
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0",
]
requires-python = ">=3.10"

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
